Fix vertical align

--- a/css/carrousel.css
+++ b/css/carrousel.css
@@ -1,14 +1,16 @@
 
 /********** CAROUSEL **********/
 .carousel-inner {
-  height: 400px;
+  height: 600px;
   overflow-y: hidden;
   box-shadow: 0 2px 5px 5px rgba(0,0,0,0.16),0 2px 5px 0 rgba(0,0,0,0.12);
 }
 
 .carousel-inner .item img {
-  min-width: 100%;
-  height: 400px;
+  /*min-width: 100%;
+  max-width: 100%;*/
+  height: 600px;
+  width:100%;
   object-fit: cover;
   -webkit-background-size: cover;
   -ms-background-size: cover;
@@ -19,7 +21,10 @@
 .carousel_legend {
   position: relative;
   width: 100%;
-  top: -100px;
+  /*top: -100px;*/
+  display: inline-block;
+  vertical-align: middle;
+  float: none;
   padding: 15px;
   border-radius: 5px;
   background: linear-gradient(to right, transparent, rgba(0, 0, 0, 0.5), transparent);
@@ -42,10 +47,10 @@
   .carousel-inner .item img {
     height: 600px;
   }
-
+/*
   .carousel_legend {
     top: -175px;
-  }
+  }*/
 
   .carousel_legend h4 {
     font-size: 2.3em;
@@ -58,12 +63,12 @@
   .carousel-inner .item img {
     height: 600px;
   }
-
+/*
   .carousel_legend {
     float: none;
-    top: -175px;
+    top: -0px;
   }
-
+*/
   .carousel_legend h4 {
     font-size: 2em;
   }
@@ -79,11 +84,11 @@
   .carousel-inner .item img {
     height: 400px;
   }
-
+/*
   .carousel_legend {
     float: none;
     top: -50px;
-  }
+  }*/
 
   .carousel_legend h4 {
     font-size: 2em;
@@ -100,12 +105,12 @@
   .carousel-inner .item img {
     height: 300px;
   }
-
+/*
   .carousel_legend {
     float: none;
     top: -50px;
   }
-
+*/
   .carousel_legend h4 {
     font-size: 1.7em;
   }
@@ -121,11 +126,11 @@
   .carousel-inner .item img {
     height: 200px;
   }
-
+/*
   .carousel_legend {
     float: none;
     top: 10px;
-  }
+  }*/
 
   .carousel_legend h4 {
     font-size: 1em;
